[package]
name = "svdag"
version = "0.1.0"
authors = ["Sam Smith <13868670+SamHSmith@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.11"
image = "0.23.3"
antelope = { path = "../antelope" }

[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "bin"
path = "src/bin.rs"
