[package]
name = "svdag"
version = "0.1.0"
authors = ["Sam Smith <13868670+SamHSmith@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.11"
image = "0.23.3"
rand = "0.7.3"
rayon = "1.3.0"
cgmath = "0.17.0"
vulkano = {path = "../vulkano/vulkano"}
vulkano-shaders = {path = "../vulkano/vulkano-shaders"}
crossvulkan = { path = "../crossvulkan", features = ["vulkano-support"] }


[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "bin"
path = "src/bin.rs"
